--- a/src/AppBundle/Resources/views/Builder/no-decks-text.de.html.twig
+++ b/src/AppBundle/Resources/views/Builder/no-decks-text.de.html.twig
@@ -1,19 +1,19 @@
 <h1>What, no deck?</h1>
 
 <p>
-    Du kannst Decks <span class="fake-inline-button text-primary"><span class="fa fa-pencil"></span> Bearbeiten</span>
+    Du kannst Decks <span class="fake-inline-button text-primary"><span class="fas fa-pencil-alt"></span> Bearbeiten</span>
     bist du mit ihnen zufrieden bist,
-    dann <span class="fake-inline-button text-primary"><span class="fa fa-share"></span> Veröffentlichen</span>, um sie
+    dann <span class="fake-inline-button text-primary"><span class="fas fa-share"></span> Veröffentlichen</span>, um sie
     mit anderen zu diskutieren.
     Und wenn du sie für dich behalten möchtest, kannst du sie trotzdem <span
-            class="fake-inline-button text-primary"><span class="fa fa-download"></span> Herunterladen</span> oder
-    <span class="fake-inline-button text-primary"><span class="fa fa-clipboard"></span> Exportieren</span>.
+            class="fake-inline-button text-primary"><span class="fas fa-file-download"></span> Herunterladen</span> oder
+    <span class="fake-inline-button text-primary"><span class="fas fa-file-export"></span> Exportieren</span>.
 </p>
 
 <p>
     Also worauf wartest du? Um dein erstes Deck zu erstellen kannst du entweder eins von Grund auf selber <span
-            class="fake-inline-button text-primary"><span class="fa fa-plus"></span> Bauen</span>, eins aus dem Internet
-    <span class="fake-inline-button text-primary"><span class="fa fa-upload"></span> Importieren</span>, oder eine Datei
+            class="fake-inline-button text-primary"><span class="fas fa-plus"></span> Bauen</span>, eins aus dem Internet
+    <span class="fake-inline-button text-primary"><span class="fas fa-file-import"></span> Importieren</span>, oder eine Datei
     im OCTGN- oder Textformat
-    oder <span class="fake-inline-button text-primary"><span class="fa fa-upload"></span> Hochladen</span>.
+    oder <span class="fake-inline-button text-primary"><span class="fas fa-file-upload"></span> Hochladen</span>.
 </p>
