--- a/src/AppBundle/Resources/views/Builder/tab-pane-build.html.twig
+++ b/src/AppBundle/Resources/views/Builder/tab-pane-build.html.twig
@@ -2,7 +2,7 @@
     <div class="col-md-12 text-right" style="margin-bottom:10px">
         <div class="btn-group">
             <button type="button" class="btn btn-xs btn-default dropdown-toggle " data-toggle="dropdown">
-                <span class="fa fa-sort"></span> <span class="hidden-xs">{{ 'decks.edit.build.sort' | trans }}</span>
+                <span class="fas fa-sort"></span> <span class="hidden-xs">{{ 'decks.edit.build.sort' | trans }}</span>
                 <span class="caret"></span>
             </button>
             <ul class="dropdown-menu" role="menu" id="menu-sort">
