--- a/src/AppBundle/Resources/views/Decklist/author-and-description.html.twig
+++ b/src/AppBundle/Resources/views/Decklist/author-and-description.html.twig
@@ -1,7 +1,7 @@
 {% import "AppBundle::macros.html.twig" as macros %}
 
 <h3 class="username">
-    <span class="fa fa-user"></span>
+    <span class="fas fa-user"></span>
     {{ macros.username(decklist.user) }}
 </h3>
 <div id="deck-description">{{ decklist.descriptionHtml|raw }}</div>
