--- a/src/AppBundle/Resources/views/Search/display-card-reviews.html.twig
+++ b/src/AppBundle/Resources/views/Search/display-card-reviews.html.twig
@@ -14,7 +14,7 @@
                 <div class="review-like">
                     <a id="review-social-icon-like" href="#" class="social-icon-like" data-toggle="tooltip"
                        data-placement="bottom" title="{{ 'card.reviews.like' | trans }}">
-                        <span class="fa fa-heart"></span> <span class="num">{{ review.nbVotes }}</span>
+                        <span class="fas fa-heart"></span> <span class="num">{{ review.nbVotes }}</span>
                     </a>
                 </div>
                 <div class="review-content">
