--- a/src/AppBundle/Resources/views/Search/form.html.twig
+++ b/src/AppBundle/Resources/views/Search/form.html.twig
@@ -87,9 +87,9 @@
                     {% endfor %}
                 {% endfor %}
                 <a href="#" id="select_all"><span
-                            class="fa fa-check"></span> {{ 'decklist.list.search.allowed.all' | trans }}</a>
+                            class="fas fa-check"></span> {{ 'decklist.list.search.allowed.all' | trans }}</a>
                 / <a href="#" id="select_none"><span
-                            class="fa fa-times"></span> {{ 'decklist.list.search.allowed.none' | trans }}</a>
+                            class="fas fa-times"></span> {{ 'decklist.list.search.allowed.none' | trans }}</a>
             </div>
         </div>
     </div>
