--- a/src/AppBundle/Resources/views/footer.de.html.twig
+++ b/src/AppBundle/Resources/views/footer.de.html.twig
@@ -3,7 +3,7 @@
         <ul class="list-inline">
             <li><a href="{{ path('about') }}">Über diese Seite</a></li>
             <li><a href="{{ path('api_intro') }}">API</a></li>
-            <li><a href="{{ path('donators') }}">Spender/innen</a> <span class="fa fa-gift donator"
+            <li><a href="{{ path('donators') }}">Spender/innen</a> <span class="fas fa-gift donator"
                                                                          title="Die großzügigen Spender/innen"></span>
             </li>
         </ul>
@@ -16,8 +16,8 @@
         <p>
             Betrieben von <a href="https://github.com/stopfstedt">stopfstedt</a>
             Kontakt:
-            <a href="https://twitter.com/stefan667" title="Twitter"><span class="fa fa-twitter"></span></a>
-            <a href="mailto:webmaester@thronesdb.com" title="E-Mail"><span class="fa fa-envelope"></span></a>
+            <a href="https://twitter.com/stefan667" title="Twitter"><span class="fab fa-twitter"></span></a>
+            <a href="mailto:webmaester@thronesdb.com" title="E-Mail"><span class="fas fa-envelope"></span></a>
         </p>
 
         <p>
@@ -28,7 +28,7 @@
         <p>
             Deutsche Übersetzung von <a href="https://github.com/Zaph0dB33bl3br0x">Zaph0dB33bl3br0x</a>.
             Kontakt:
-            <a href="mailto:ur.schaefer@live.de" title="E-mail"><span class="fa fa-envelope"></span></a>
+            <a href="mailto:ur.schaefer@live.de" title="E-mail"><span class="fas fa-envelope"></span></a>
         </p>
 
         <p>
