--- a/src/AppBundle/Resources/views/footer.en.html.twig
+++ b/src/AppBundle/Resources/views/footer.en.html.twig
@@ -3,7 +3,7 @@
         <ul class="list-inline">
             <li><a href="{{ path('about') }}">About</a></li>
             <li><a href="{{ path('api_intro') }}">API</a></li>
-            <li><a href="{{ path('donators') }}">Donators</a> <span class="fa fa-gift donator"
+            <li><a href="{{ path('donators') }}">Donators</a> <span class="fas fa-gift donator"
                                                                     title="The Gracious Donator"></span></li>
         </ul>
     </div>
@@ -15,8 +15,8 @@
         <p>
             Maintained by <a href="https://github.com/stopfstedt">stopfstedt</a>
             Contact:
-            <a href="https://twitter.com/stefan667" title="Twitter"><span class="fa fa-twitter"></span></a>
-            <a href="mailto:webmaester@thronesdb.com" title="E-mail"><span class="fa fa-envelope"></span></a>
+            <a href="https://twitter.com/stefan667" title="Twitter"><span class="fab fa-twitter"></span></a>
+            <a href="mailto:webmaester@thronesdb.com" title="E-mail"><span class="fas fa-envelope"></span></a>
         </p>
 
         <p>
