--- a/src/AppBundle/Resources/views/layout.html.twig
+++ b/src/AppBundle/Resources/views/layout.html.twig
@@ -92,7 +92,7 @@
                     <ul class="nav navbar-nav navbar-right">
                         <li class="dropdown hidden-xs hidden-lg">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
-                               aria-expanded="false"><span class="fa fa-search"></span></a>
+                               aria-expanded="false"><span class="fas fa-search"></span></a>
                             <div class="dropdown-menu">
                                 <form action="{{ path('cards_find') }}">
                                     <input type="text" placeholder="{{ 'nav.cardsearch' | trans }}"
@@ -101,7 +101,7 @@
                             </div>
                         </li>
                         <li id="login">
-                            <a href="#" class="disabled"><span class="fa fa-user"></span></a>
+                            <a href="#" class="disabled"><span class="fas fa-user"></span></a>
                         </li>
                         <!-- locale selection -->
                         {% if _route is not empty %}
