--- a/src/AppBundle/Resources/views/Builder/draw-simulator.html.twig
+++ b/src/AppBundle/Resources/views/Builder/draw-simulator.html.twig
@@ -2,7 +2,7 @@
 <table class="table table-condensed" id="table-draw-simulator">
     <thead>
     <tr>
-        <th colspan="1"><span class="fa fa-repeat"></span> {{ 'decks.simulator.title' | trans }}</th>
+        <th colspan="1"><span class="fas fa-redo-alt"></span> {{ 'decks.simulator.title' | trans }}</th>
     </tr>
     </thead>
     <tbody>
@@ -20,9 +20,9 @@
             </div>
             <div title="{{ 'decks.simulator.oddhint' | trans }}">
 		    	<span class="small">{{ 'decks.simulator.odds' | trans }}:
-		    		<span id="draw-simulator-odds-1">0</span>% &ndash; 
-		    		<span id="draw-simulator-odds-2">0</span>% &ndash; 
-		    		<span id="draw-simulator-odds-3">0</span>% 
+		    		<span id="draw-simulator-odds-1">0</span>% &ndash;
+		    		<span id="draw-simulator-odds-2">0</span>% &ndash;
+		    		<span id="draw-simulator-odds-3">0</span>%
 		    		<a href="#oddsModal" id="draw-simulator-more" data-toggle="modal"
                        style="margin:0 10px">{{ 'decks.simulator.more' | trans }}</a>
 		    	</span>
