--- a/src/AppBundle/Resources/views/Builder/no-decks-text.en.html.twig
+++ b/src/AppBundle/Resources/views/Builder/no-decks-text.en.html.twig
@@ -2,19 +2,19 @@
 
 <p>
     Decks are awesome. You can <span class="fake-inline-button text-primary"><span
-                class="fa fa-pencil"></span> Edit</span> them until you're satisfied,
-    then <span class="fake-inline-button text-primary"><span class="fa fa-share"></span> Publish</span> them for others
+                class="fas fa-pencil-alt"></span> Edit</span> them until you're satisfied,
+    then <span class="fake-inline-button text-primary"><span class="fas fa-share"></span> Publish</span> them for others
     to discuss.
     And if you want to keep to yourself, you can still <span class="fake-inline-button text-primary"><span
-                class="fa fa-download"></span> Download</span> them or
-    <span class="fake-inline-button text-primary"><span class="fa fa-clipboard"></span> Export</span> them.
+                class="fas fa-file-download"></span> Download</span> them or
+    <span class="fake-inline-button text-primary"><span class="fas fa-file-export"></span> Export</span> them.
 </p>
 
 <p>
     So what are you waiting for? To create your first deck, you can either <span
-            class="fake-inline-button text-primary"><span class="fa fa-plus"></span> Build</span> one from scratch using
+            class="fake-inline-button text-primary"><span class="fas fa-plus"></span> Build</span> one from scratch using
     the Deckbuilder,
-    <span class="fake-inline-button text-primary"><span class="fa fa-upload"></span> Import</span> one from the web,
-    or <span class="fake-inline-button text-primary"><span class="fa fa-upload"></span> Upload</span> a deck file in
+    <span class="fake-inline-button text-primary"><span class="fas fa-file-import"></span> Import</span> one from the web,
+    or <span class="fake-inline-button text-primary"><span class="fas fa-file-upload"></span> Upload</span> a deck file in
     Octgn or simple text format.
 </p>
