--- a/src/AppBundle/Resources/views/Builder/tab-pane-history.html.twig
+++ b/src/AppBundle/Resources/views/Builder/tab-pane-history.html.twig
@@ -30,7 +30,7 @@
     <thead>
     <tr>
         <th colspan="{% if deck.children|length %}4{% else %}1{% endif %}"><span
-                    class="fa fa-share"></span> {{ 'decks.published.title' | trans }}</th>
+                    class="fas fa-share"></span> {{ 'decks.published.title' | trans }}</th>
     </tr>
     </thead>
     <tbody>
