--- a/src/AppBundle/Resources/views/Decklist/comments.html.twig
+++ b/src/AppBundle/Resources/views/Decklist/comments.html.twig
@@ -4,7 +4,7 @@
     <thead>
     <tr>
         <th>
-            <span class="fa fa-comment"></span>{% transchoice decklist.nbComments with {'%count%': decklist.nbComments} %}decklist.view.comments.count{% endtranschoice %}
+            <span class="fas fa-comment"></span> {% transchoice decklist.nbComments with {'%count%': decklist.nbComments} %}decklist.view.comments.count{% endtranschoice %}
         </th>
     </tr>
     </thead>
@@ -14,11 +14,11 @@
             <td id="comment-{{ comment.id }}">
                 <div class="small comment-toggler" style="{% if not comment.isHidden %}display:none{% endif %}">
                     <a href="#div-comment-{{ comment.id }}" data-toggle="collapse" class="text-muted pull-right"
-                       style="margin-left:.5em"><span class="fa fa-eye"></span></a>
+                       style="margin-left:.5em"><span class="fas fa-eye"></span></a>
                 </div>
                 <div class="collapse{% if not comment.isHidden %} in{% endif %}" id="div-comment-{{ comment.id }}">
                     <h4 class="comment-header">
-    		<span class="comment-date pull-right">
+            <span class="comment-date pull-right">
                 <time datetime="{{ comment.dateCreation|date('c') }}">{{ comment.dateCreation|date('M d, Y') }}</time>
             </span>
                         <span class="comment-author">{{ macros.username(comment.user) }}</span>
