--- a/src/AppBundle/Resources/views/Decklist/table-graph-strengths.html.twig
+++ b/src/AppBundle/Resources/views/Decklist/table-graph-strengths.html.twig
@@ -1,7 +1,7 @@
 <table class="table table-condensed" id="table-graph-strengths">
     <thead>
     <tr>
-        <th colspan="1"><span class="fa fa-bar-chart"></span> Repartition by Strength</th>
+        <th colspan="1"><span class="fas fa-chart-bar"></span> Repartition by Strength</th>
     </tr>
     </thead>
     <tbody>
