--- a/src/AppBundle/Resources/views/Decklist/table-predecessor.html.twig
+++ b/src/AppBundle/Resources/views/Decklist/table-predecessor.html.twig
@@ -4,7 +4,7 @@
     <thead>
     <tr>
         <th colspan="{% if decklist.precedent %}4{% else %}1{% endif %}"><span
-                    class="fa fa-backward"></span> {{ 'decklist.view.derived.title' | trans }}</th>
+                    class="fas fa-backward"></span> {{ 'decklist.view.derived.title' | trans }}</th>
     </tr>
     </thead>
     <tbody>
