--- a/src/AppBundle/Resources/views/Decklist/table-successor.html.twig
+++ b/src/AppBundle/Resources/views/Decklist/table-successor.html.twig
@@ -4,7 +4,7 @@
     <thead>
     <tr>
         <th colspan="{% if decklist.successors|length %}4{% else %}1{% endif %}"><span
-                    class="fa fa-forward"></span> {{ 'decklist.view.inspire.title' | trans }}</th>
+                    class="fas fa-forward"></span> {{ 'decklist.view.inspire.title' | trans }}</th>
     </tr>
     </thead>
     <tbody>
