--- a/src/AppBundle/Resources/views/Default/donators.es.html.twig
+++ b/src/AppBundle/Resources/views/Default/donators.es.html.twig
@@ -18,7 +18,7 @@
                         <li>
                             <a href="{{ path('user_profile_public', {user_id:donator.id,user_name:donator.username|e('url')}) }}"
                                class="username {{ donator.faction }}">{{ donator.username }}</a>
-                            <span class="fa fa-gift donator" title="ThronesDB Gracious Donator"></span>
+                            <span class="fas fa-gift donator" title="ThronesDB Gracious Donator"></span>
                         </li>
                     {% endfor %}
                 </ul>
