--- a/src/AppBundle/Resources/views/Default/recent_reviews.html.twig
+++ b/src/AppBundle/Resources/views/Default/recent_reviews.html.twig
@@ -5,7 +5,7 @@
             <article class="review">
                 <h4>
                     <span class="pull-right"><span
-                                class="fa fa-heart social-icon-like"></span> {{ review.nb_votes }}</span>
+                                class="fas fa-heart social-icon-like"></span> {{ review.nb_votes }}</span>
                     <a href="{{ path('cards_zoom', {card_code:review.card_code}) }}#review-{{ review.id }}"
                        class="card">{{ review.card_name }}</a>
                 </h4>
@@ -13,7 +13,7 @@
                     by
                     <a href="{{ path('user_profile_public', {user_id:review.user_id,user_name:review.username|e('url')}) }}"
                        class="{{ review.usercolor }}">{{ review.username }}</a>
-                    {% if review.donation > 0 %}<span class="fa fa-gift donator"
+                    {% if review.donation > 0 %}<span class="fas fa-gift donator"
                                                       title="ThronesDB Gracious Donator"></span>{% endif %}
                     <small class="reputation">{{ review.reputation }}</small>
                 </div>
