--- a/src/AppBundle/Resources/views/Reviews/reviews.html.twig
+++ b/src/AppBundle/Resources/views/Reviews/reviews.html.twig
@@ -44,7 +44,7 @@
                                 <div class="review-like">
                                     <a id="review-social-icon-like" href="#" class="social-icon-like"
                                        data-toggle="tooltip" data-placement="bottom" title="Like that review">
-                                        <span class="fa fa-heart"></span> <span class="num">{{ review.nbVotes }}</span>
+                                        <span class="fas fa-heart"></span> <span class="num">{{ review.nbVotes }}</span>
                                     </a>
                                 </div>
                                 <div class="review-content">
@@ -59,7 +59,7 @@
                                         <a href="{{ path('user_profile_public', {user_id:review.user.id,user_name:review.user.username|e('url')}) }}"
                                            rel="author"
                                            class="username {{ review.user.color }}">{{ review.user.username }}</a>
-                                        {% if review.user.donation > 0 %}<span class="fa fa-gift donator"
+                                        {% if review.user.donation > 0 %}<span class="fas fa-gift donator"
                                                                                title="ThronesDB Gracious Donator"></span>{% endif %}
                                         <small class="reputation">{{ review.user.reputation }}</small>
                                     </div>
@@ -73,7 +73,7 @@
                                                    href="{{ path('user_profile_public', {user_id:comment.user.id,user_name:comment.user.username|e('url')}) }}"
                                                    rel="author"
                                                    class="username {{ comment.user.color }}">{{ comment.user.username }}</a>
-                                                {% if comment.user.donation > 0 %}<span class="fa fa-gift donator"
+                                                {% if comment.user.donation > 0 %}<span class="fas fa-gift donator"
                                                                                         title="ThronesDB Gracious Donator"></span>{% endif %}
                                                 <time datetime="{{ comment.dateCreation|date('c') }}"
                                                       title="{{ comment.dateCreation|date('F jS, Y') }}">{{ comment.dateCreation|date('n/j/y') }}</time>
