--- a/src/AppBundle/Resources/views/footer.es.html.twig
+++ b/src/AppBundle/Resources/views/footer.es.html.twig
@@ -4,7 +4,7 @@
         <ul class="list-inline">
             <li><a href="{{ path('about') }}">Sobre este sitio</a></li>
             <li><a href="{{ path('api_intro') }}">API</a></li>
-            <li><a href="{{ path('donators') }}">Donadores</a> <span class="fa fa-gift donator"
+            <li><a href="{{ path('donators') }}">Donadores</a> <span class="fas fa-gift donator"
                                                                      title="Los Gentiles Donadores"></span></li>
         </ul>
     </div>
@@ -16,8 +16,8 @@
         <p>
             Mantenido por <a href="https://github.com/stopfstedt">stopfstedt</a>
             Contact:
-            <a href="https://twitter.com/stefan667" title="Twitter"><span class="fa fa-twitter"></span></a>
-            <a href="mailto:webmaester@thronesdb.com" title="E-mail"><span class="fa fa-envelope"></span></a>
+            <a href="https://twitter.com/stefan667" title="Twitter"><span class="fab fa-twitter"></span></a>
+            <a href="mailto:webmaester@thronesdb.com" title="E-mail"><span class="fas fa-envelope"></span></a>
         </p>
 
         <p>
@@ -27,8 +27,8 @@
         <p>
             Traducido al castellano por fafranco82
             Contacto:
-            <a href="https://twitter.com/morifinwe" title="Twitter"><span class="fa fa-twitter"></span></a>
-            <a href="mailto:fafranco82@gmail.com" title="E-mail"><span class="fa fa-envelope"></span></a>
+            <a href="https://twitter.com/morifinwe" title="Twitter"><span class="fab fa-twitter"></span></a>
+            <a href="mailto:fafranco82@gmail.com" title="E-mail"><span class="fas fa-envelope"></span></a>
         </p>
 
         <p>
