un-hide house/agenda images on mobile.

--- a/src/AppBundle/Resources/views/Decklist/decklists.html.twig
+++ b/src/AppBundle/Resources/views/Decklist/decklists.html.twig
@@ -80,7 +80,7 @@
                     {% for decklist in decklists %}
 
                         <tr>
-                            <td class="decklist-faction-image hidden-xs">
+                            <td class="decklist-faction-image">
                                 <img
                                     src="/bundles/app/images/factions/{{ decklist.faction.code }}.png"
                                     title="{{ decklist.faction.name }}"
