--- a/src/AppBundle/Resources/public/css/style.css
+++ b/src/AppBundle/Resources/public/css/style.css
@@ -205,8 +205,7 @@ ol {
     vertical-align: middle;
 }
 .list-decks img {
-    height: 63px;
-    width: 45px;
+    height: 64px;
 }
 #tag_toggles button {
     margin-bottom: 4px;
@@ -310,6 +309,10 @@ div.site-slogan {
 }
 
 /************ LIST OF DECKLISTS **************/
+
+.decklist-faction-image {
+    min-width: 112px;
+}
 
 .decklist-faction-image img {
     height: 64px;
@@ -436,27 +439,27 @@ article.review {
 article.review:first-child {
     margin-top: 0;
 }
-article.review .review-like { 
-    float:left; 
-    font-size: 120%; 
-    width:50px 
+article.review .review-like {
+    float:left;
+    font-size: 120%;
+    width:50px
 }
-article.review .review-content { 
-    margin-left: 50px 
+article.review .review-content {
+    margin-left: 50px
 }
-article.review .review-text :first-child { 
-    margin-top: 0px 
+article.review .review-text :first-child {
+    margin-top: 0px
 }
-article.review .review-date { 
-    clear: both; 
-    text-align: right 
+article.review .review-date {
+    clear: both;
+    text-align: right
 }
-article.review .review-author { 
-    text-align: right 
+article.review .review-author {
+    text-align: right
 }
-article.review .review-comment { 
-    border-top: 1px solid #ddd; 
-    padding: 0.5em; 
+article.review .review-comment {
+    border-top: 1px solid #ddd;
+    padding: 0.5em;
 }
 
 /****************** BOOTSTRAP MARKDOWN *******************/
